# neoradar-cofrance

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: ci.yml  release.yml
src/: CoFrance.cpp  CoFrance.h  GateAssigner.cpp  GateAssigner.h  OceanicClearance.cpp  OceanicClearance.h  main.cpp
